--- a/WebPageSummarizer.ipynb
+++ b/WebPageSummarizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8ce13728-0040-43cc-82cd-e10c838ef71c",
    "metadata": {},
    "outputs": [
@@ -22,17 +22,23 @@
       "Amount of words: 526\n",
       "\n",
       "\n",
+      "📊 Usage Report\n",
+      "🧾 Prompt tokens: 927\n",
+      "🧠 Completion tokens: 336\n",
+      "🔢 Total tokens: 1263\n",
+      "💰 Total cost: $0.000968\n",
+      "\n",
+      "\n",
+      "\n",
       "# 📝 Summary\n",
       "\n",
-      "Exciting developments are happening at the Instituto Tecnológico de Aeronáutica (ITA) with the ITASAT 2 project, a new microsatellite being designed for scientific and defense applications! 🚀 Between March 17-19, 2025, the Preliminary Design Review (PDR) was conducted, marking a significant milestone in the project. The review involved various partners, including prominent institutions like NASA and the U.S. Southern Command—demonstrating international collaboration in space research!\n",
+      "Exciting developments are happening at the Instituto Tecnológico de Aeronáutica (ITA)! The ITASAT 2 project, a new microsatellite under development by researchers at the ITA Space Center, underwent its Preliminary Design Review (PDR) from March 17 to 19, 2025. This crucial step in the project's timeline involved participation from various partners, both from Brazil and abroad, including esteemed organizations like NASA and the U.S. Naval Research Laboratory! \n",
       "\n",
-      "The ITASAT 2 will consist of a constellation of three CubeSats, aimed at monitoring the Earth’s ionosphere and analyzing plasma bubble formation and impact. In defense applications, it promises to enhance radiofrequency geolocation on land and sea while also identifying non-collaborative vessels—talk about advanced technology! 🌐\n",
+      "Set for launch in the coming years, ITASAT 2 will comprise a constellation of three CubeSats, focusing on Earth’s ionosphere monitoring and the impact of plasma bubble formations. That’s super important for understanding our atmosphere, right? In addition, it will enhance defense applications by geolocating radiofrequency sources both on land and at sea, and identifying non-cooperative vessels through optical means.\n",
       "\n",
-      "Feedback from participants, including Professor Luís Eduardo Vergueiro Loures da Costa, highlighted the comprehensive understanding and capabilities of the ITASAT 2 team. Master’s student Débora Santos expressed that the review was incredibly productive, showcasing the team's effort and preparation.\n",
+      "Prof. Luís Eduardo Vergueiro Loures da Costa underscored the significance of this PDR, noting it reflects the team's capability in addressing project risks and objectives. The review was deemed extremely productive, showcasing the hard work and preparation of the entire team involved!\n",
       "\n",
-      "Fascinatingly, CubeSats like the ITASAT 2 consist of cubic units, with ITASAT 2 being a 16U model made up of 16 units. ITA has a history of satellite development, including ITASAT 1 and the SPORT mission, indicating a solid track record in space exploration! Plus, there are more exciting projects on the horizon, like the SelenITA CubeSat, which will be part of NASA's Artemis mission to study the Moon! 🌕 \n",
-      "\n",
-      "The future of space research at ITA looks incredibly promising, and I'm thrilled to see where this journey will lead! 🌟\n"
+      "Speaking of CubeSats, these tiny satellites are structured in cubic units, with ITASAT 2 being a hefty 16U model consisting of sixteen 10 cm units! ITA has a rich history of satellite development, including ITASAT 1 and the recent SPORT satellite. And let’s not forget, there’s also an exciting project underway called SelenITA, which will participate in NASA's Artemis mission to explore the Moon! What a thrilling time for space exploration! 🚀\n"
      ]
     }
    ],
@@ -64,10 +70,11 @@
     "    \"\"\"\n",
     "        Class to work with text extraction, processing and summarizing from a given url using the BeautifulSoup library.\n",
     "    \"\"\"\n",
-    "    def __init__(self, url: str, summary_detail: str = \"high\", show_summary: bool = True, language_of_reference = \"English\") -> None:\n",
+    "    def __init__(self, url: str, summary_detail: str = \"high\", show_summary: bool = True, language_of_reference = \"English\", model: str = \"gpt-4o-mini\") -> None:\n",
     "\n",
     "        # Initial summarizer settings\n",
     "        self.url = url\n",
+    "        self.model = model\n",
     "        self.show_summary = show_summary\n",
     "        self.summary_detail = summary_detail\n",
     "        self.language_of_reference = language_of_reference\n",
@@ -82,6 +89,15 @@
     "            \"chinese\": \"zh\",\n",
     "            \"korean\": \"ko\",\n",
     "        }\n",
+    "        \n",
+    "        self.model_pricing =  {\n",
+    "            \"gpt-4o-mini\": {\"input\": 0.0005, \"output\": 0.0015},\n",
+    "            \"gpt-4o\": {\"input\": 0.005, \"output\": 0.015},\n",
+    "            \"gpt-4-turbo\": {\"input\": 0.01, \"output\": 0.03},\n",
+    "            \"gpt-4\": {\"input\": 0.03, \"output\": 0.06},  # Rarely used now\n",
+    "            \"gpt-3.5-turbo\": {\"input\": 0.0005, \"output\": 0.0015}\n",
+    "        }\n",
+    "\n",
     "        self.headers = {\n",
     "            \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 \"\n",
     "                          \"(KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36\"\n",
@@ -127,10 +143,24 @@
     "        if self.show_summary:\n",
     "            print(\"🔗 Preview of extracted text:\\n\")\n",
     "            print(self.text[:500] + \"\\n...\\n\")\n",
-    "            print(f\"Amount of words: {len(self.text.split())}\\n\\n\")\n",
+    "            print(f\"Amount of words: {len(self.text.split())}\\n\")\n",
+    "\n",
+    "    def __calculate_cost(self, prompt_tokens: int, completion_tokens: int) -> float:\n",
+    "        \"\"\"\n",
+    "        Calculates total cost in USD based on selected model.\n",
+    "        \"\"\"\n",
+    "        pricing = self.model_pricing.get(self.model)\n",
+    "        if pricing is None:\n",
+    "            raise ValueError(f\"\"\"Pricing not available for model \"{self.model}\". Add it to model_pricing.\"\"\")\n",
+    "    \n",
+    "        input_cost = (prompt_tokens / 1000) * pricing[\"input\"]\n",
+    "        output_cost = (completion_tokens / 1000) * pricing[\"output\"]\n",
+    "        return input_cost + output_cost\n",
     "\n",
     "    def summarize(self)-> str:\n",
-    "        \"\"\"Method to process user prompts in the context of the user.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Method to process user prompts in the context of the user.\n",
+    "        \"\"\"\n",
     "        self.__extract_text()\n",
     "        self.__detect_language()\n",
     "        \n",
@@ -151,8 +181,19 @@
     "            {self.system_prompt.strip()}\n",
     "            \"\"\"\n",
     "\n",
-    "        response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=[{\"role\":\"system\", \"content\":self.system_prompt}, \n",
+    "        response = openai.chat.completions.create(model=self.model, messages=[{\"role\":\"system\", \"content\":self.system_prompt}, \n",
     "                                                                                 {\"role\": \"user\",  \"content\":self.content}])\n",
+    "\n",
+    "        # Cost calculation and usage report\n",
+    "        usage = response.usage\n",
+    "        total_cost = self.__calculate_cost(usage.prompt_tokens, usage.completion_tokens)\n",
+    "    \n",
+    "        print(\"\\n📊 Usage Report\")\n",
+    "        print(f\"🧾 Prompt tokens: {usage.prompt_tokens}\")\n",
+    "        print(f\"🧠 Completion tokens: {usage.completion_tokens}\")\n",
+    "        print(f\"🔢 Total tokens: {usage.total_tokens}\")\n",
+    "        print(f\"💰 Total cost: ${total_cost:.6f}\\n\\n\\n\")\n",
+    "\n",
     "        return response.choices[0].message.content\n",
     "\n",
     "\n",
