Update summarizer output to display + markdown

--- a/WebPageSummarizer.ipynb
+++ b/WebPageSummarizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "8ce13728-0040-43cc-82cd-e10c838ef71c",
    "metadata": {},
    "outputs": [
@@ -24,22 +24,35 @@
       "\n",
       "📊 Usage Report\n",
       "🧾 Prompt tokens: 927\n",
-      "🧠 Completion tokens: 336\n",
-      "🔢 Total tokens: 1263\n",
-      "💰 Total cost: $0.000968\n",
+      "🧠 Completion tokens: 309\n",
+      "🔢 Total tokens: 1236\n",
+      "💰 Total cost: $0.000927\n",
       "\n",
       "\n",
-      "\n",
-      "# 📝 Summary\n",
-      "\n",
-      "Exciting developments are happening at the Instituto Tecnológico de Aeronáutica (ITA)! The ITASAT 2 project, a new microsatellite under development by researchers at the ITA Space Center, underwent its Preliminary Design Review (PDR) from March 17 to 19, 2025. This crucial step in the project's timeline involved participation from various partners, both from Brazil and abroad, including esteemed organizations like NASA and the U.S. Naval Research Laboratory! \n",
-      "\n",
-      "Set for launch in the coming years, ITASAT 2 will comprise a constellation of three CubeSats, focusing on Earth’s ionosphere monitoring and the impact of plasma bubble formations. That’s super important for understanding our atmosphere, right? In addition, it will enhance defense applications by geolocating radiofrequency sources both on land and at sea, and identifying non-cooperative vessels through optical means.\n",
-      "\n",
-      "Prof. Luís Eduardo Vergueiro Loures da Costa underscored the significance of this PDR, noting it reflects the team's capability in addressing project risks and objectives. The review was deemed extremely productive, showcasing the hard work and preparation of the entire team involved!\n",
-      "\n",
-      "Speaking of CubeSats, these tiny satellites are structured in cubic units, with ITASAT 2 being a hefty 16U model consisting of sixteen 10 cm units! ITA has a rich history of satellite development, including ITASAT 1 and the recent SPORT satellite. And let’s not forget, there’s also an exciting project underway called SelenITA, which will participate in NASA's Artemis mission to explore the Moon! What a thrilling time for space exploration! 🚀\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "# 📝 Summary\n",
+       "\n",
+       "The ITA (Instituto Tecnológico de Aeronáutica) is working on the ITASAT 2 project, a new microsatellite geared towards scientific and defense applications! 🌟 This initiative was highlighted at the Preliminary Design Review (PDR) held from March 17 to 19, with participation from notable organizations such as NASA and the Brazilian Space Agency (AEB). This is a fantastic collaboration that spans both domestic and international partnerships – how exciting is that? \n",
+       "\n",
+       "ITASAT 2 will consist of a constellation of three CubeSats focusing on monitoring the Earth's ionosphere and assessing plasma bubble formation. Interestingly, it also has defense applications such as geolocating radio frequency sources and optical identification of uncooperative vessels – a crucial capability for maritime security!\n",
+       "\n",
+       "The PDR showcased the team's technical and managerial capabilities, receiving unanimous approval to proceed with the project. It’s great to see such thorough preparation reflecting the dedication of the ITA team! \n",
+       "\n",
+       "The CubeSats themselves are cubic nano or microsatellites, and the ITASAT 2 is of the 16U variety, meaning it's made up of 16 units measuring 10 cm each – just amazing how compact these technologies can be! Additionally, the CEI is also developing another CubeSat called SelenITA, which will contribute to NASA's Artemis mission to study the Moon! 🌕\n",
+       "\n",
+       "Keep an eye on this remarkable project as it continues to develop – the future of space exploration and defense technology looks bright! 🚀"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -55,7 +68,7 @@
     "from IPython.display import Markdown, display\n",
     "\n",
     "# Load .env variables\n",
-    "load_dotenv(override=True)\n",
+    "load_dotenv()\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "\n",
     "# Check the key\n",
@@ -168,8 +181,8 @@
     "        self.system_prompt = f\"\"\" \n",
     "        You are an assistant that analyzes the contents of a website and provides a summary. \n",
     "        Please notice that providing a {self.summary_detail} summary detail is IMPORTANT.\n",
-    "        If you find text that might be navigation related or ad related please ignore. Respond in markdown. Also, can you please start your summary \n",
-    "        with the tile \"📝 Summary\"?\n",
+    "        If you find text that might be navigation related or ad related please ignore. Respond in markdown. \n",
+    "        Also, can you please start your summary with the tile \"📝 Summary\"?\n",
     "        \n",
     "        Please show some excited behavior during your summary, making comments with extra knowledge if possible during or at the end of the sentence. \n",
     "        \"\"\"\n",
@@ -198,13 +211,13 @@
     "\n",
     "\n",
     "web_page_summarizer = WebPageSummarizer(\"http://www.ita.br/noticias/revisodeprojetodonovomicrossatlitedoitaaprovada\", summary_detail = \"low\")\n",
-    "print(web_page_summarizer.summarize())"
+    "display(Markdown(web_page_summarizer.summarize()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb250f0-7e87-471a-bbe9-67c4908498dc",
+   "id": "af5a186a-bb25-4cf4-a6d2-6034cd493bc4",
    "metadata": {},
    "outputs": [],
    "source": []
