chore: update to remove requests and use directly ollama library

--- a/WebPageSummarizerOllama.ipynb
+++ b/WebPageSummarizerOllama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8ce13728-0040-43cc-82cd-e10c838ef71c",
    "metadata": {},
    "outputs": [
@@ -27,13 +27,19 @@
      "data": {
       "text/markdown": [
        "📝 Summary\n",
-       "Oh boy, get ready for some exciting space-related news! 🚀 The Instituto Tecnológico de Aeronáutica (ITA) has just concluded the Preliminary Design Review (PDR) of their new microsatellite project, ITASAT 2! 🎉 This innovative satellite is expected to launch in the coming years and will be a constellation of three cubesats responsible for monitoring the Earth's ionosphere. 🔭 Not only that, but it'll also enable geolocation of radiofrequency sources on land and sea, as well as optical identification of non-collaborative vessels! 🚢\n",
+       "Oh boy, are you ready for some exciting news?! The Instituto Tecnológico de Aeronáutica (ITA) just had a crucial meeting to review the project of their new microsatellite, ITASAT2! This tiny but mighty satellite will be used for scientific applications and defense purposes. Let me give you the lowdown:\n",
        "\n",
-       "The PDR was attended by representatives from various institutions, including ITA, CENSIPAM, DGDNTM, AEB, INPE, FINEP, NASA, Comando Sul dos Estados Unidos, NRL, and Utah State University. 🌎 This event marks an important milestone in the project's development, showcasing the team's understanding of the objectives and their ability to propose solutions and identify risks! 💡\n",
+       "ITASAT2 is a constellation of three cubesats that will monitor the Earth's ionosphere, tracking plasma bubbles and identifying non-collaborative vessels. It's scheduled to launch in the next few years! The meeting was attended by representatives from various organizations, including the Brazilian government, NASA, and more.\n",
        "\n",
-       "As you might know, cubesats are small satellites structured in cubic units, each 10 cm on a side. In this case, ITASAT 2 is composed of 16 such units, making it a total of 16U. 📊 The ITA has a rich history of developing and launching satellites for research and student training, including the ITASAT 1 and SPORT projects! 🚀\n",
+       "The ITASAT2 project is a huge deal, requiring expertise from multiple engineering fields, such as orbital mechanics, control systems, propulsion, structures, and thermal management. After a thorough review, the project received unanimous approval to move forward!\n",
        "\n",
-       "That's not all, folks! 😄 The CEI is also working on the SelenITA project, a CubeSat that will be part of NASA's Artemis mission to study the Moon! 🌕 Stay tuned for more updates on this exciting development in space technology! 🚀"
+       "One of the team members, Débora Santos, described the meeting as \"extremely productive\" for both the reviewers and the team. She praised the well-structured presentations and the team's commitment and competence.\n",
+       "\n",
+       "Now, let me tell you about cubesats! They're tiny satellites that come in units called 1U, which measures 10 cm on each side. ITASAT2 is a 16U cube sat, composed of 16 of these units. The ITA has a rich history of developing satellites, including the ITASAT1, launched in 2018, and the SPORT, launched in 2022.\n",
+       "\n",
+       "The CEI is also working on another exciting project called SelenITA, which will be part of NASA's Artemis mission to study the Moon!\n",
+       "\n",
+       "That's it for now!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -47,6 +53,7 @@
     "# Import Libraries\n",
     "import os\n",
     "import requests\n",
+    "import ollama\n",
     "from bs4 import BeautifulSoup\n",
     "from langdetect import detect, LangDetectException\n",
     "\n",
@@ -156,10 +163,10 @@
     "        messages=[{\"role\":\"system\", \"content\":self.system_prompt}, \n",
     "                  {\"role\": \"user\",  \"content\":self.content}]\n",
     "\n",
-    "        response = requests.post(ollama_api, json = {\"model\": model, \"messages\": messages, \"stream\": False}, headers = headers)\n",
+    "        response = ollama.chat(model = model, messages = messages)\n",
     "\n",
     "        # Cost calculation and usage report\n",
-    "        return response.json()[\"message\"][\"content\"]\n",
+    "        return response[\"message\"][\"content\"]\n",
     "\n",
     "\n",
     "web_page_summarizer = WebPageSummarizer(\"http://www.ita.br/noticias/revisodeprojetodonovomicrossatlitedoitaaprovada\", summary_detail = \"low\")\n",
